--- a/buildout.cfg
+++ b/buildout.cfg
@@ -7,7 +7,6 @@
 
 extends = 
     https://raw.github.com/reebalazs/buildout.javascript.yeoman/master/yeoman.cfg
-    versions.cfg
     http://dist.plone.org/release/4.2.5/versions.cfg
 
 extensions = mr.developer
@@ -35,7 +34,7 @@ find-links =
 # If you are using the mr.developer extension and have the source code in a 
 # repository mr.developer will handle this automatically for you
 develop =
-    src/firebaseplonedemo
+    ./
 
 
 # Create bin/instance command to manage Zope start up and shutdown
@@ -104,3 +103,5 @@ firebase_token_generator = git https://github.com/firebase/firebase-token-genera
 #[buster_script]
 #<= node_script
 #script_name = buster
+
+[versions]
