Remove portlet, add viewlet

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -41,21 +41,21 @@ develop =
 [instance]
 recipe = plone.recipe.zope2instance
 user = admin:admin
-http-address = 8686
+http-address = 8788
 debug-mode = off
 verbose-security = on
 blob-storage = var/blobstorage
 
 eggs =
     Plone
-    PIL
-    firebaseplonedemo
+    Pillow
+    plone_interact
 
 # Some pre-Plone 3.3 packages may need you to register the package name here in 
 # order their configure.zcml to be run (http://plone.org/products/plone/roadmap/247)
 # - this is never required for packages in the Products namespace (Products.*)
 zcml =
-    firebaseplonedemo
+    plone_interact
 
 
 # zopepy commands allows you to execute Python scripts using a PYTHONPATH 
@@ -94,7 +94,8 @@ eggs = ${instance:eggs}
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
-# need github version from firebase-token-generator, as the release is broken with
+# need github version from firebase-token-generator,
+# as the release is broken with setuptools (README.md missing).
 firebase_token_generator = git https://github.com/firebase/firebase-token-generator-python.git
 
 
