--- a/buildout.cfg
+++ b/buildout.cfg
@@ -97,6 +97,7 @@ eggs = ${instance:eggs}
 # need github version from firebase-token-generator,
 # as the release is broken with setuptools (README.md missing).
 firebase_token_generator = git https://github.com/firebase/firebase-token-generator-python.git
+python-firebase = git git://github.com/mikexstudios/python-firebase.git
 
 
 # You can specify your own additional Node scripts.
