Fix firebase_token_generator dependancy to install cleanly without buildout

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -96,7 +96,7 @@ eggs = ${instance:eggs}
 [sources]
 # need github version from firebase-token-generator,
 # as the release is broken with setuptools (README.md missing).
-firebase_token_generator = git https://github.com/firebase/firebase-token-generator-python.git
+#firebase_token_generator = git https://github.com/firebase/firebase-token-generator-python.git
 python-firebase = git git://github.com/mikexstudios/python-firebase.git
 
 
