Pin firebase_token_generator from buildout. Also some callable fixes are needed for python2.6.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -94,7 +94,7 @@ eggs = ${instance:eggs}
 # Put your mr.developer managed source code repositories here, see
 # http://pypi.python.org/pypi/mr.developer for details on format for this part
 [sources]
-
+firebase_token_generator = git https://github.com/reebalazs/firebase-token-generator-python.git
 
 # You can specify your own additional Node scripts.
 # Make sure to add dependencies to package.json as well.
