Change package name from plone_interact to collective_firebase. Scripts change interact_put => firebase_put, interact_get => firebase_get. Env vars change to PLONE_COLLECTIVE_FIREBASE_URL and PLONE_COLLECTIVE_FIREBASE_SECRET.

--- a/buildout.cfg
+++ b/buildout.cfg
@@ -49,13 +49,13 @@ blob-storage = var/blobstorage
 eggs =
     Plone
     Pillow
-    plone_interact
+    collective_firebase
 
 # Some pre-Plone 3.3 packages may need you to register the package name here in 
 # order their configure.zcml to be run (http://plone.org/products/plone/roadmap/247)
 # - this is never required for packages in the Products namespace (Products.*)
 zcml =
-    plone_interact
+    collective_firebase
 
 
 # zopepy commands allows you to execute Python scripts using a PYTHONPATH 
