--- a/buildout.cfg
+++ b/buildout.cfg
@@ -57,7 +57,10 @@ eggs =
 zcml =
     collective_firebase
 
-
+environment-vars =
+     PLONE_COLLECTIVE_FIREBASE_SECRET ZsAjg**********...
+     PLONE_COLLECTIVE_FIREBASE_URL https://my-firebase.firebaseio.com/collective_firebase
+     
 # zopepy commands allows you to execute Python scripts using a PYTHONPATH 
 # including all the configured eggs
 [zopepy]
