--- a/buildout.cfg
+++ b/buildout.cfg
@@ -50,6 +50,7 @@ eggs =
     Plone
     Pillow
     collective_firebase
+    Products.PloneHotfix20130618
 
 # Some pre-Plone 3.3 packages may need you to register the package name here in 
 # order their configure.zcml to be run (http://plone.org/products/plone/roadmap/247)
